--- a/MicroWave.Test.Integration/MicroWave.Test.Integration.csproj
+++ b/MicroWave.Test.Integration/MicroWave.Test.Integration.csproj
@@ -58,7 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="IT4_Cookcontroller_Display.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IT2_Userinterface_Door.cs" />
+    <Compile Include="IT5_UserInterface_Display.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Microwave.Application\Microwave.Application.csproj">
