--- a/MicroWave.Test.Integration/MicroWave.Test.Integration.csproj
+++ b/MicroWave.Test.Integration/MicroWave.Test.Integration.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="IT3_CookController.cs" />
     <Compile Include="IT4_Cookcontroller_Display.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IT2_Userinterface_Door.cs" />
