--- a/MicroWave.Test.Integration/MicroWave.Test.Integration.csproj
+++ b/MicroWave.Test.Integration/MicroWave.Test.Integration.csproj
@@ -58,8 +58,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="IT1_UserInterface_button.cs" />
+    <Compile Include="IT2_Userinterface_Door.cs" />
     <Compile Include="IT3_CookController.cs" />
     <Compile Include="IT4_Cookcontroller_Display.cs" />
+    <Compile Include="IT5_UserInterface_Display.cs" />
     <Compile Include="IT6_Light.cs" />
     <Compile Include="IT7_Timer.cs" />
     <Compile Include="IT8_Powertube.cs" />
