--- a/MicroWave.Test.Integration/MicroWave.Test.Integration.csproj
+++ b/MicroWave.Test.Integration/MicroWave.Test.Integration.csproj
@@ -57,7 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IT10_display_output.cs" />
+    <Compile Include="IT2_powertube_output.cs" />
+    <Compile Include="IT3_display_output.cs" />
     <Compile Include="IT1_UserInterface_button.cs" />
     <Compile Include="IT2_Userinterface_Door.cs" />
     <Compile Include="IT3_CookController.cs" />
@@ -66,7 +67,7 @@
     <Compile Include="IT6_Light.cs" />
     <Compile Include="IT7_Timer.cs" />
     <Compile Include="IT8_Powertube.cs" />
-    <Compile Include="IT9_Light_output.cs" />
+    <Compile Include="IT1_Light_output.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
