--- a/MicroWave.Test.Integration/MicroWave.Test.Integration.csproj
+++ b/MicroWave.Test.Integration/MicroWave.Test.Integration.csproj
@@ -58,8 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IT1_Cookcontroller_Timer.cs" />
-    <Compile Include="IT2_CookController.cs" />
-    <Compile Include="IT3_UserInterface.cs" />
+    <Compile Include="IT2_CookController_Display_PowerTube.cs" />
+    <Compile Include="IT3_UserInterface_CookController.cs" />
     <Compile Include="IT4_Door_UserInterface.cs" />
     <Compile Include="IT5_Button_UserInterface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
